# buck2-protobuf

./: .buckconfig  .gitignore  BUCK  README.md  RELEASE_NOTES.md  governance.yaml  performance_monitoring.db  registry.yaml  test_report.md  test_results.json
docs/: README.md  bsr-authentication.md  bsr-team-caching.md  bsr-team-management.md  buf-rules.md  contributing.md  migration-guide.md  oras-client.md  package-manager-integration.md  performance.md  private-bsr-repositories.md  registry-infrastructure.md  rules-reference.md  task-002-completion-report.md  tool-version-updates.md  troubleshooting.md
examples/: BUCK
examples/modern-plugins/package-managers/rust-cargo/: Cargo.toml
qa/: run_qa_suite.py
rules/: BUCK  bsr.bzl  bsr_publish.bzl  bsr_team_cache.bzl  buf.bzl  connect.bzl  cpp.bzl  go.bzl  governance.bzl  proto.bzl  protovalidate.bzl  python.bzl  rust.bzl  security.bzl  tools.bzl  typescript.bzl  validation.bzl
scripts/: production_validation.sh
test/: BUCK  __init__.py  cache_test.bzl  run_comprehensive_tests.py  security_test.bzl  simple_test_runner.py  test_utils.py  validate_buf_integration_examples.py  validation_test.bzl
tools/: BUCK  artifact_publisher.py  audit_logger.py  bsr_auth.py  bsr_breaking_change_detector.py  bsr_breaking_change_notifier.py  bsr_change_tracker.py  bsr_client.py  bsr_private_auth.py  bsr_publisher.py  bsr_team_oras_cache.py  bsr_teams.py  bsr_version_manager.py  buf_toolchain.bzl  cargo_plugin_installer.py  code_security_validator.py  dependency_impact_analyzer.py  download_buf.py  download_plugins.py  oras_bsr.py  (+36 more)
(+251 files in other folders)
