[package]
name = "modern-protobuf-rust-demo"
version = "0.1.0"
edition = "2021"
description = "Modern Rust protobuf development with native Cargo integration"

[dependencies]
# Modern Rust protobuf ecosystem
prost = "0.12.3"
prost-types = "0.12.3"
tonic = "0.10.2"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

# Modern validation (protovalidate-go equivalent for Rust)
protovalidate = { version = "0.1.0", optional = true }

# Connect-Rust (future modern RPC framework)
connect-rs = { version = "0.1.0", optional = true }

# Error handling and async support
anyhow = "1.0.79"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
# Native Cargo build system integration
prost-build = "0.12.3"
tonic-build = "0.10.2"

[dev-dependencies]
tokio-test = "0.4.3"

[features]
default = ["validation", "connect"]
validation = ["protovalidate"]
connect = ["connect-rs"]

# Example of how buck2 can integrate with Cargo features
buck2-integration = []

[[example]]
name = "grpc_server"
path = "examples/grpc_server.rs"

[[example]]
name = "grpc_client" 
path = "examples/grpc_client.rs"

[package.metadata.buck2]
# Buck2-specific metadata for integration
proto_sources = ["proto/"]
generated_sources = ["src/generated/"]
